--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -119,6 +119,8 @@ $jet         : #222222;
 $black       : #000000;
 $fortyOrange : #E74C3C;
 
+$yellow		 : #FFFFB2;
+
 // We use these as default colors throughout
 $primary-color: #008CBA;
 $secondary-color: #e7e7e7;
